@@ -59,9 +59,11 @@ public class FilesHandler implements HttpHandler {
 
   private static HttpResponse postFile(final HttpRequest request) throws IOException {
     final var fileName = request.pathParams().getString("filename");
-    final Path path = Path.of("/tmp/data/codecrafters.io/http-server-tester/" + fileName);
+    final Path path = Path.of("./tmp/data/codecrafters.io/http-server-tester/" + fileName);
 
-    Files.writeString(path, request.body().get());
+    Files.createDirectories(path.getParent());
+
+    Files.write(path, request.body().get());
 
     return HttpResponseBuilder
         .builder()
